# swarm

./: .gitmodules  README.md  speed_data.txt
.github/workflows/: c-cpp.yml
Rasp/: README.md  READMEPI.txt  Test_MPU6050.py  speed_data.txt  testMotorsNew.py
Rasp/Code/: MPU6050revisedreading.py  Test_MPU6050.py
Rasp/Code/Example_Code_4_motor_control_w_pi/: Base_Car_Operation_Code.py  Encodertest.py  Getting_three_img_size_into_results.py  Test_Encoders .py  Test_Motors.py  Test_Swarmbot.bak.py  Test_Swarmbot.py  origin_calculation.py  program1.py
Rasp/Code/Example_Code_4_motor_control_w_pi/New_Motor_Tests/: LogIn_4_2nd_SD_Card.txt  Test_both_motors_w_L3D.py  Test_right_motor_w_L3D.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_control_demo_description/share/ros2_control_demo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_control_demo_description/share/ros2_control_demo_description/cmake/: ros2_control_demo_descriptionConfig-version.cmake  ros2_control_demo_descriptionConfig.cmake
install/ros2_control_demo_description/share/ros2_control_demo_description/environment/: ament_prefix_path.dsv  path.dsv
install/ros2_control_demo_example_2/include/ros2_control_demo_example_2/ros2_control_demo_example_2/: diffbot_system.hpp  encoder.hpp  pi_comms.hpp  visibility_control.h  wheel.hpp
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml  ros2_control_demo_example_2.xml
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  ros2_control_demo_example_2Config-version.cmake  ros2_control_demo_example_2Config.cmake
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/config/: diffbot_controllers.yaml
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/launch/: diffbot.launch.py  view_robot.launch.py
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/ros2_control/: diffbot.ros2_control.xacro
install/ros2_control_demo_example_2/share/ros2_control_demo_example_2/urdf/: diffbot.urdf.xacro
install/swarm_bot/share/swarm_bot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/swarm_bot/share/swarm_bot/cmake/: swarm_botConfig-version.cmake  swarm_botConfig.cmake
install/swarm_bot/share/swarm_bot/config/: empty.yaml  gazebo_params.yaml  joystick.yaml  robot_controllers.yaml  view_bot.rviz
install/swarm_bot/share/swarm_bot/environment/: path.dsv  (+1 more)
install/vslam/lib/vslam/: grid_mapper  system  video_reader
install/vslam/share/vslam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
models/maze_swarm/: model.config  model.sdf
models/maze_swarm/meshes/: mazeSwarm.mtl
ros/: .gitignore  frames_2024-04-13_14.15.58.gv
ros/src/aslam/: README.md  package.xml  setup.cfg  setup.py
ros/src/aslam/aslam/: explore_planner.py  map_nav.py
ros/src/ball_capture/: CMakeLists.txt  package.xml
ros/src/ball_capture/msg/: DetectedBall.msg
ros/src/ball_capture/src/: capture_ball.cpp  detect_ball.cpp
ros/src/common/: CMakeLists.txt  package.xml
ros/src/common/srv/: XbeeOut.srv
ros/src/example_2/: CMakeLists.txt
ros/src/example_2/hardware/: diffbot_system.cpp
ros/src/ros2_control_demo_example_2/: CMakeLists.txt
ros/src/ros2_control_demo_example_2/hardware/: diffbot_system.cpp
ros/src/ros2orbslam3/: CMakeLists.txt  package.xml
ros/src/ros2orbslam3/src/: grid_mapper.cpp  mono_orb_slam3_node.cpp  subscriber_member_function.cpp  video_reader.cpp
ros/src/shitty_motor_controller/: package.xml  setup.cfg  setup.py
ros/src/shitty_motor_controller/shitty_motor_controller/: .controller.py.swp  controller.py  shitty_pi_comms.py
ros/src/swarm_bot/: CMakeLists.txt  README.md  package.xml
ros/src/swarm_bot/config/: aslam.rviz  frames_2024-04-06_15.30.05.gv  joystick.yaml  mapper_params_online_async.yaml  nav2.rviz  nav2_params.yaml  robot_controllers.yaml  twist_mux.yaml
ros/src/swarm_bot/description/: camera.xacro  gazebo_control.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.old.xacro  robot.urdf.xacro  robot_core copy.xacro  robot_core.xacro  ros2_control.xacro
ros/src/swarm_bot/launch/: joystick.launch.py  launch_sim.launch.py  localization.launch.py  navigation.launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
ros/src/swarm_bot/worlds/: apartmentswag.world  maze_swarm_map.world  random_env.world  turtle_world.world  vslam_env.world
ros/src/swarm_exp/: package.xml  setup.cfg  setup.py
ros/src/swarm_explore/: package.xml  setup.cfg  setup.py
ros/src/swarm_explore/swarm_explore/: explore_node.py
ros/src/utils/: package.xml  setup.py
ros/src/utils/utils/: webcam.py
ros/src/vslam/: CMakeLists.txt  README.md  package.xml
ros/src/vslam/msg/: KeyFrame.msg  Map.msg  MapPoint.msg
ros/src/vslam/orbslam/: iphone_settings.yaml  mono_settings.yaml
ros/src/vslam/src/: grid_mapper.cpp  system_node.cpp  video_reader.cpp
ros/src/xbee/: package.xml  setup.cfg  setup.py
ros/src/xbee/srv/: XbeeSend.srv
ros/src/xbee/xbee/: xbee_in.py  xbee_rec.py  xbee_srv.py  xbee_test_send.py
ros/src/xbee_remote_motor_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros/src/xbee_remote_motor_controller/xbee_remote_motor_controller/: rc_motor_driver.py  remote_controller.py
test-motors/: driving_car.py  led_tester.py  motor_driver.py  motor_driver2.py  motor_driver_with_encoder.py  motor_funcs.py  servo_ball.py  speed_data.txt  stop_motor.py
xbee/: basic_xbee.py
(+108 files in other folders)
